--- a/css/projects.css
+++ b/css/projects.css
@@ -3,6 +3,7 @@
     padding: 0;
     text-decoration: none;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -10,7 +11,7 @@ body {
     height: 100vh;
     background: #101010;  /* fallback for old browsers */
     background-color:rgb(230, 230, 230);
-    overflow-y: scroll;
+    overflow: none;
     scroll-behavior: smooth;
     scroll-snap-type: y mandatory;
   }
@@ -30,48 +31,55 @@ nav{
   }
   
 .logo{
-color: rgb(230, 230, 230);
-text-transform: uppercase;
-letter-spacing: 5px;
-font-size: 30px;
+    color: rgb(230, 230, 230);
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-size: 30px;
 }
 
 .logo a{
-font-weight: bold;
-letter-spacing: 0px;
-text-decoration: none;
-color: rgb(230, 230, 230);
+    font-weight: bold;
+    letter-spacing: 0px;
+    text-decoration: none;
+    color: rgb(230, 230, 230);
 }
 
 .nav-links {
-display: flex;
-width: 30%;
-justify-content: space-around;
+    display: flex;
+    width: 30%;
+    justify-content: space-around;
 }
 
 .nav-links li{
-list-style: none;
+    list-style: none;
 }
 
 .nav-links a{
-color: rgb(230, 230, 230);
-text-decoration: none;
-letter-spacing: 3px;
-font-weight: bold;
-font-size: 14px;
+    color: rgb(230, 230, 230);
+    text-decoration: none;
+    letter-spacing: 3px;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 .burger {
-display: none;
-cursor: pointer;
+    display: none;
+    cursor: pointer;
 }
 
 .burger div{
-width: 25px;
-height: 3px;
-background-color: rgb(230, 230, 230);
-margin: 5px;
-transition: all 0.3s ease;
+    width: 25px;
+    height: 3px;
+    background-color: rgb(230, 230, 230);
+    margin: 5px;
+    transition: all 0.3s ease;
+}
+
+.title-text {
+    padding-top: 110px;
+    padding-bottom: 30px;
+    position: relative;
+    text-align: center;
 }
 
 @media screen and (max-width: 768px) {
