--- a/css/projects.css
+++ b/css/projects.css
@@ -1,3 +1,14 @@
+/* FONTS
+font-family: 'Merriweather', serif;
+font-family: 'Montserrat', sans-serif;
+font-family: 'Open Sans', sans-serif;
+font-family: 'Roboto Slab', serif;
+font-family: 'Source Code Pro', monospace;
+font-family: 'Staatliches', cursive;
+font-family: 'Work Sans', sans-serif;
+#F2BA38 //YELLOW
+*/
+
 * {
     margin: 0;
     padding: 0;
@@ -7,6 +18,7 @@
 }
 
 body {
+    font-family: 'Montserrat', sans-serif;
     line-height: 1.6;
     height: 100vh;
     background: #101010;  /* fallback for old browsers */
@@ -81,6 +93,20 @@ nav{
     position: relative;
     text-align: center;
 }
+
+.img {
+    cursor: pointer;
+    transition:         0.1s ease-in;
+    -o-transition:      0.1s ease-in;
+    -ms-transition:     0.1s ease-in;
+    -moz-transition:    0.1s ease-in;
+    -webkit-transition: 0.1s ease-in;
+  }
+  
+  .img:hover {
+    opacity: 85%;
+    transform: scale(1.1, 1.1);
+  }
 
 @media screen and (max-width: 768px) {
     body{
