--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ body {
   scroll-snap-type: y mandatory;
 }
 
-#topButton {
+/* #topButton {
   display: none;
   position: fixed;
   bottom: 20px;
@@ -43,6 +43,44 @@ body {
 
 #topButton:hover {
   background-color: #ccc;
+} */
+
+#topButton {
+  display: inline-block;
+  background-color: #121d35;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  border-radius: 4px;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  transition: background-color .3s, 
+    opacity .5s, visibility .5s;
+  opacity: 0;
+  visibility: hidden;
+  z-index: 1000;
+}
+#topButton::after {
+  content: "\f077";
+  font-family: FontAwesome;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 2em;
+  line-height: 50px;
+  color: #fff;
+}
+#topButton:hover {
+  cursor: pointer;
+  background-color: #F2BA38;
+}
+#topButton:active {
+  background-color: #d4a331;
+}
+
+#topButton.show {
+  opacity: 1;
+  visibility: visible;
 }
 
 .container {
